addd mysql container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,31 @@
 version: '3'
 
 services:
+  mysql:
+    image: mysql:latest
+    environment:
+      - MYSQL_DATABASE=connectf
+      - MYSQL_USER=connectfuser
+      - MYSQL_PASSWORD=connectfpwd
+      - MYSQL_ROOT_PASSWORD=root
+    ports:
+      - "3306:3306"
+
   backend:
     build:
       context: .
       dockerfile: ./dockerfiles/Dockerfile.backend
+    # mysql takes a few seconds to start up, so we wait for it
+    command: /app/wait-for-it.sh mysql:3306 --timeout=30 -- bash -c "
+        python manage.py migrate && \
+        python manage.py import_annotation -i ./connectf_data_release_v1/arabidopsis/annotation.20200324.csv.gz && \
+        python manage.py import_data ./connectf_data_release_v1/arabidopsis/data ./connectf_data_release_v1/arabidopsis/metadata && \
+        gunicorn --workers 5 --timeout 200 --bind 0.0.0.0:8001 -m 007 connectf.wsgi"
+        # python manage.py import_edges ./connectf_data_release_v1/arabidopsis/additional_edges && \
     ports:
       - "8001:8001"
+    depends_on: 
+      - mysql
 
   nginx:
     build:
