--- a/dockerfiles/Dockerfile.backend
+++ b/dockerfiles/Dockerfile.backend
@@ -10,6 +10,7 @@ COPY . /app
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
+RUN mv /app/dockerfiles/config.yaml /app/connectf/config.yaml
 RUN chmod +x /app/dockerfiles/wait-for-it.sh
 RUN chmod +x /app/dockerfiles/import-data.sh
 
