--- a/dockerfiles/Dockerfile.nginx
+++ b/dockerfiles/Dockerfile.nginx
@@ -7,12 +7,14 @@ FROM --platform=amd64 ubuntu:latest AS builder
 RUN apt-get update && \
     apt-get install -y build-essential && \
     apt-get install -y curl && \
+    apt-get install -y git && \
     apt-get install -y python2 && \
     curl -fsSL https://deb.nodesource.com/setup_14.x | bash - && \
     apt-get install -y nodejs
 
 WORKDIR /app
 COPY --from=connectf_react . .
+RUN npm install -g npm@6.14.18
 RUN npm install
 RUN npm rebuild node-sass
 RUN npm run build
